--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,7 @@
   --heading-font-size-xs: 22px;
 
   /* nav height */
-  --nav-height: 189px;
+  --nav-height: 72px;
 }
 
 main .button-container { display: inline; }
